deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: back
  name: back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: ssan91/back:v2
        ports:
        - containerPort: 80
