service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 3080
  type: ClusterIP
