ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: back
              servicePort: 3080
    - host: sa.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: front
              servicePort: 3000
